hard-gists/5720029/run.log
=== Docker Run Log for 5720029 ===
Started at: Mi 29. Okt 15:56:04 CET 2025

[2025-10-29 15:56:05] START: Running container for 5720029
[2025-10-29 15:56:05] SUCCESS: Container 40baa1b649029a61c48e2bdea3c86715a80af73f2c076a8e5d40bfca6a6b512b started for 5720029
=== Container logs for 5720029 ===
  File "/snippet.py", line 6
    print "Creating directory {}".format(path)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5720029 ===
[2025-10-29 15:56:07] INFO: Container 40baa1b649029a61c48e2bdea3c86715a80af73f2c076a8e5d40bfca6a6b512b has stopped
